--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,6 +12,7 @@
 @import 'navbar.css';
 @import 'sidebar.css';
 @import 'illustration.css';
+@import 'web5-quickstart.css';
 
 /* You can override the default Infima variables here. */
 :root {
@@ -355,7 +356,7 @@ article h1 {
   }
 }
 
-@media (min-width: 768px) and (max-width:1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   article h1 {
     font-weight: var(--typography-h1-t-font-weight);
     font-size: var(--typography-h1-t-font-size) !important;
