--- a/src/css/web5-quickstart.css
+++ b/src/css/web5-quickstart.css
@@ -49,5 +49,28 @@ main code {
 
 main .output {
   width: 100%;
-  margin-top: 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.input button {
+  border-color: var(--color-blue);
+  color: var(--color-blue);
+  padding: 0.5em 1em;
+  text-align: center;
+  border: 2px solid;
+  border-radius: 0.5em;
+}
+
+.input button:disabled {
+  border-color: gray;
+  color: gray;
+  padding: 0.5em 1em;
+  text-align: center;
+  border: 2px solid;
+  border-radius: 0.5em;
+}
+
+.quickstart-container {
+  margin: 0 2em;
 }
