--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -3,7 +3,6 @@
 }
 
 html.plugin-docs.plugin-id-default body {
-
   background-color: #1c1c1c;
 }
 
@@ -66,6 +65,7 @@ html.plugin-docs.plugin-id-default aside .menu__link {
   color: var(--ifm-menu-color);
   padding-top: 0rem;
   padding-bottom: 0rem;
+  height: 28px;
 }
 
 html.plugin-docs.plugin-id-default aside aside .menu__link {
@@ -122,7 +122,7 @@ html.plugin-docs.plugin-id-default .navbar {
     padding-left: 0rem !important;
     font-size: large;
   }
-    html.plugin-docs.plugin-id-default
+  html.plugin-docs.plugin-id-default
     aside.docSidebarContainer_src-layout-DocPage-styles-module,
   html.plugin-docs.plugin-id-default aside.theme-doc-sidebar-container {
     margin-right: 1.5rem;
@@ -294,7 +294,9 @@ html.plugin-docs.plugin-id-default .table-of-contents__left-border li {
   font-family: var(--tbd-font-sans);
 }
 
-html.plugin-docs.plugin-id-default .table-of-contents__left-border li:is(:first-of-type, :last-of-type) {
+html.plugin-docs.plugin-id-default
+  .table-of-contents__left-border
+  li:is(:first-of-type, :last-of-type) {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -304,8 +306,6 @@ html.plugin-docs.plugin-id-default .table-of-contents__left-border li:is(:first-
   overflow: auto;
   height: 95vh;
 }
-
-
 
 /* Changes */
 .hero-button {
@@ -335,7 +335,12 @@ article .markdown .theme-card > p {
 
 html.plugin-docs.plugin-id-default article .theme-card.primary-theme-card h2,
 html.plugin-docs.plugin-id-default article .theme-card.primary-theme-card p,
-html.plugin-docs.plugin-id-default article .theme-card.primary-theme-card .hero-button a > div{
+html.plugin-docs.plugin-id-default
+  article
+  .theme-card.primary-theme-card
+  .hero-button
+  a
+  > div {
   color: #fff;
 }
 
