added more padding to right of TBD Home link in navbar

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -205,6 +205,10 @@
   padding-right: 0px !important;
 }
 
+.navbar__items--right > :last-child {
+  padding-right: 16px;
+}
+
 .navbar-sidebar .navbar-sidebar__item:last-child .menu__link {
   padding-left: 0px !important;
 }
