--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -165,6 +165,10 @@ main.col.col--7 article.margin-bottom--xl {
   padding-bottom: 5rem;
 }
 
+article {
+  padding: 2rem;
+}
+
 article p img {
   border: 2px solid var(--color-blue);
 }
