--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -159,6 +159,11 @@ article .markdown p code {
   background-color: gray;
 }
 
+.token.plain {
+  font-family: monospace;
+  font-size: 18px;
+}
+
 .pagination-nav__sublabel {
   display: none;
 }
