[DO NOT MERGE] Phase 2 (#365)
* adjust spacing on sidebar

* styling adjustments

* remove margin top

* added hero card

* responsive adjustments, new API ref layout

* added tier 3 component and started community section

* Add separation border in sidebar

* Set up community component

* making progress on community component

* add learning content and fix tailwind bug

* remove docs/intro

* Update web5 intro page (#364)

* Adding all the content

* update home to say "Getting Started"

* Update styles to docs site

* Organizing sidebar

* First iteration of Web5 QuickStart into dev site repo

* add todo app

* Updated styling to hero cards

* fixed caterogy files

* First iteration of Web5 QuickStart into dev site repo (#368)

* Pare Web5 Intro buttons down to quickstart and contribute (#369)

* Fix quickstart link (#370)

* restoring web5 project page to its original state

* fixing page to not reuse web5 project page

* fix sidebar order

* rename quickstart

* added language to code snippets

* swap learn and build positioning

* converting VC Issuance tutorial to a blog post

* converting VC Issuance tutorial into blog post

* update meta tags in web5 index

* First stan at putting markdown from quickstart into partials

* updating todo tutorial

* add widget to quickstart

* doc index page

* fixing thumbnail width

* cleaning up spacing, styling and steps

* fixing icon size

* fix css

* add web5 library and address "readonly" attributes

* upgraded react, remove locale, switch from dynamic import

* adjusted sidebar

* put arrows to the right, adjusted spacing

* slightly adjusted spacing

* use latest version of web5-js

* updating styling on Docs intro page

* style adjustments

* adjust caret

* styling fixes for docs intro page

* fixed spacing on docs intro page

* removed shadow from code image and narrowed spacing

* small changes to tutorial

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -123,7 +123,6 @@
   .navbar-sidebar__item:first-child
   .menu__link--active:not(.menu__link--sublist) {
   background-color: var(--color-black);
-  height: 18px;
 }
 
 .navbar-sidebar .navbar-sidebar__item:first-child .menu__link--active::before {
@@ -206,6 +205,10 @@
   padding-right: 0px !important;
 }
 
+.navbar__items--right > :last-child {
+  padding-right: 16px;
+}
+
 .navbar-sidebar .navbar-sidebar__item:last-child .menu__link {
   padding-left: 0px !important;
 }
@@ -225,7 +228,7 @@
 }
 
 .navbar-sidebar .navbar-sidebar__item:last-child .menu__list-item-collapsible {
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .navbar-sidebar
@@ -279,23 +282,14 @@
   top: -6px;
 }
 
-
 aside .menu__link {
   color: gray !important;
   padding-top: 0rem;
   padding-bottom: 0rem;
-  height: 18px;
   background-color: transparent !important;
   text-decoration: none;
 }
 
-aside .menu__link--active {
-  color: white !important;
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  height: 18px;
-}
-
-aside .menu__list-item-collapsible {
-    background-color: transparent !important;
+aside .menu__link--sublist-caret:after {
+  position: relative;
 }
