--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;700;800&family=IBM+Plex+Sans:wght@300;400;500;700;800&display=swap');
 
 @import 'text.css';
 @import 'prose.css';
@@ -12,6 +12,7 @@
 @import 'navbar.css';
 @import 'sidebar.css';
 @import 'illustration.css';
+@import 'web5-quickstart.css';
 
 /* You can override the default Infima variables here. */
 :root {
@@ -162,6 +163,10 @@ main.col.col--7 article.margin-bottom--xl {
   background-position: bottom;
   margin-bottom: 4.5rem !important;
   padding-bottom: 5rem;
+}
+
+article {
+  padding: 2rem;
 }
 
 article p img {
@@ -341,7 +346,7 @@ main.col.col--7 {
 
 article h1 {
   font-weight: var(--typography-h1-d-font-weight);
-  font-size: var(--typography-h1-d-font-size) !important;
+  font-size: var(--typography-h1-d-font-size);
   line-height: var(--typography-h1-d-line-height);
 }
 
@@ -355,7 +360,7 @@ article h1 {
   }
 }
 
-@media (min-width: 768px and max-width:1024px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   article h1 {
     font-weight: var(--typography-h1-t-font-weight);
     font-size: var(--typography-h1-t-font-size) !important;
@@ -430,10 +435,6 @@ aside.col.col--3 nav ul li a:hover {
   background-attachment: unset;
   background-position-x: 0em;
   padding-left: 20px;
-}
-
-.padding-top--md.padding-bottom--lg .row .col div {
-  max-width: 46rem;
 }
 
 ul.breadcrumbs {
