--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -3,15 +3,11 @@
 }
 
 html.plugin-docs.plugin-id-default body {
-  background-color: #1C1C1C;
+  background-color: #1c1c1c;
 }
 
 html.plugin-docs.plugin-id-default #__docusaurus {
   padding: 0 !important;
-}
-
-html.plugin-docs.plugin-id-default .main-wrapper, html.plugin-docs.plugin-id-default .navbar {
-  max-width: initial !important;
 }
 
 html.plugin-docs.plugin-id-default .main-wrapper {
@@ -34,14 +30,14 @@ html.plugin-docs.plugin-id-default .navbar__items--right {
 }
 
 html.plugin-docs.plugin-id-default .navbar__item {
-  padding-top: 24px
+  padding-top: 24px;
 }
 
 html.plugin-docs.plugin-id-default .navbar__logo {
-    margin-bottom: 1.5rem;
-    margin-left: 1.5rem;
-    margin-top: 1.5rem; 
-    height: 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 1.5rem;
+  margin-top: 1.5rem;
+  height: 1.5rem;
 }
 
 html.plugin-docs.plugin-id-default .navbar__link {
@@ -49,14 +45,15 @@ html.plugin-docs.plugin-id-default .navbar__link {
 }
 
 html.plugin-docs.plugin-id-default .navbar__link:last-child {
-  padding-right: .5rem
+  padding-right: 0.5rem;
 }
 
 html.plugin-docs.plugin-id-default .navbar__link:active {
   padding-bottom: 2rem;
 }
 
-html.plugin-docs.plugin-id-default .navbar-sidebar
+html.plugin-docs.plugin-id-default
+  .navbar-sidebar
   .navbar-sidebar__item:last-child
   .clean-btn.navbar-sidebar__back::before {
   display: inline-block;
@@ -68,7 +65,6 @@ html.plugin-docs.plugin-id-default aside .menu__link {
   color: var(--ifm-menu-color);
   padding-top: 0rem;
   padding-bottom: 0rem;
-  height: 18px;
 }
 
 html.plugin-docs.plugin-id-default aside aside .menu__link {
@@ -89,8 +85,10 @@ html.plugin-docs.plugin-id-default .thin-scrollbar {
   margin-top: 24px;
 }
 
-html.plugin-docs.plugin-id-default aside .sidebar_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-styles-module {
-    top: auto;
+html.plugin-docs.plugin-id-default
+  aside
+  .sidebar_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-styles-module {
+  top: auto;
 }
 
 html.plugin-docs.plugin-id-default .sidebar_RiAD {
@@ -98,22 +96,18 @@ html.plugin-docs.plugin-id-default .sidebar_RiAD {
 }
 
 @media (min-width: 997px) {
-html.plugin-docs.plugin-id-default aside.docSidebarContainer_src-layout-DocPage-styles-module,
- html.plugin-docs.plugin-id-default aside.theme-doc-sidebar-container {
-    border-right: 1px solid var(--color-white);
-    margin-right: 1.5rem !important;
-  }
-}
-
-@media (min-width: 997px) {
- html.plugin-docs.plugin-id-default .menu_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-Content-styles-module {
+  html.plugin-docs.plugin-id-default
+    .menu_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocSidebar-Desktop-Content-styles-module {
     flex-grow: 1;
     padding-left: 0rem !important;
     font-size: large;
   }
+  html.plugin-docs.plugin-id-default
+    aside.docSidebarContainer_src-layout-DocPage-styles-module,
+  html.plugin-docs.plugin-id-default aside.theme-doc-sidebar-container {
+    margin-right: 1.5rem;
+  }
 }
-
-
 /* Article styling */
 
 article .markdown p {
@@ -122,7 +116,6 @@ article .markdown p {
   line-height: var(--typography-body-1-d-line-height);
   letter-spacing: 1px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
 }
 
 article .markdown li {
@@ -131,7 +124,6 @@ article .markdown li {
   line-height: var(--typography-body-1-d-line-height);
   letter-spacing: 1px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
 }
 
 article .markdown blockquote {
@@ -151,7 +143,7 @@ article .theme-code-block pre {
 }
 
 article .theme-code-block pre code .token-line span {
-  color: white;;
+  color: white;
 }
 
 article .markdown p {
@@ -159,12 +151,17 @@ article .markdown p {
   font-size: var(--typography-body-1-d-font-size);
   line-height: var(--typography-body-1-d-line-height);
   letter-spacing: 1px;
-  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  font-family: var(--tbd-font-sans);
 }
 
 article .markdown p code {
   color: white;
   background-color: gray;
+}
+
+.token.plain {
+  font-family: monospace;
+  font-size: 18px;
 }
 
 .pagination-nav__sublabel {
@@ -183,13 +180,12 @@ html.plugin-docs.plugin-id-default .thin-scrollbar {
   letter-spacing: 1px;
   margin-top: 24px;
   top: 0 !important;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: var(--tbd-font-sans);
 }
 
 html.plugin-docs.plugin-id-default .thin-scrollbar ul li a {
   color: white;
 }
-
 
 html.plugin-docs.plugin-id-default article time {
   color: white;
@@ -203,7 +199,6 @@ html.plugin-docs.plugin-id-default .navbar__link {
   font-size: 18px;
   padding-bottom: 2rem;
 }
-
 
 html.plugin-docs.plugin-id-default .navbar__link:hover {
   border-bottom: 4px solid var(--color-yellow);
@@ -221,18 +216,15 @@ html.plugin-docs.plugin-id-default .thin-scrollbar ul li a:hover {
   color: var(--color-yellow);
 }
 
-html.plugin-docs.plugin-id-default .sidebarItemLinkActive_node_modules-\@docusaurus-theme-classic-lib-next-theme-BlogSidebar-styles-module {
+html.plugin-docs.plugin-id-default
+  .sidebarItemLinkActive_node_modules-\@docusaurus-theme-classic-lib-next-theme-BlogSidebar-styles-module {
   color: var(--color-yellow);
 }
 
 html.plugin-docs.plugin-id-default article h2 {
   color: var(--color-yellow);
+  font-size: 24px;
 }
-/* 
-.markdown h1:first-child {
-  font-size: 1.8rem;
-} */
-
 
 html.plugin-docs.plugin-id-default ul.table-of-contents li a code,
 html.plugin-docs.plugin-id-default ul.table-of-contents li code {
@@ -269,17 +261,85 @@ html.plugin-docs.plugin-id-default .table-of-contents__link {
 }
 
 html.plugin-docs.plugin-id-default .table-of-contents__left-border {
-  border-left: 1px solid gray !important;
+  border-left: 1px solid #343434;
+  padding-left: 1rem;
+  margin-left: 2rem;
 }
 
 html.plugin-docs.plugin-id-default .table-of-contents__left-border li {
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-right: 0;
+  margin-left: 0;
+  font-family: var(--tbd-font-sans);
 }
 
 /* Redocusaurus */
 .redocusaurus {
   overflow: auto;
   height: 95vh;
+}
+
+/* Changes */
+.hero-button {
+  z-index: 99999;
+  width: fit-content;
+}
+
+.hero-button a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.theme-card {
+  --color-card: 36, 242, 255;
+  border: 1px solid rgba(var(--color-card), 0.35);
+}
+
+.theme-card .hero-button a > div {
+  background: #fff;
+  color: #000;
+}
+
+article .markdown .theme-card > p {
+  line-height: 1.5;
+  font-size: 100%;
+  margin-bottom: 2rem;
+}
+
+html.plugin-docs.plugin-id-default article .theme-card.primary-theme-card h2,
+html.plugin-docs.plugin-id-default article .theme-card.primary-theme-card p,
+html.plugin-docs.plugin-id-default
+  article
+  .theme-card.primary-theme-card
+  .hero-button
+  a
+  > div {
+  color: #fff;
+}
+
+html.plugin-docs.plugin-id-default article .theme-card h2 {
+  color: rgba(var(--color-card));
+}
+html.plugin-docs.plugin-id-default article .theme-card p {
+  color: #fff;
+}
+
+.theme-card-cyan {
+  --color-card: 36, 242, 255;
+}
+
+.theme-card-yellow {
+  --color-card: 255, 236, 25;
+}
+
+.theme-card-purple {
+  --color-card: 213, 162, 235;
+}
+
+.community-button {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: #fff !important;
+  color: #000 !important;
 }
