--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,11 +1,15 @@
 /**SIDEBAR **/
 
+.menu.thin-scrollbar {
+  padding: 0;
+  scrollbar-gutter: initial;
+}
+
 aside .menu__link {
   color: var(--color-blue);
   padding-left: 1.875rem;
   padding-top: 0rem;
   padding-bottom: 0rem;
-  height: 18px;
 }
 
 aside .menu__link--sublist-caret:after {
@@ -25,14 +29,25 @@ aside .menu__link--sublist-caret:after {
 aside .menu__list {
   display: flex;
   flex-direction: column;
-  gap: 1.25rem;
+  gap: 0.5rem;
   transition: all 221ms ease-in-out 0s !important;
 }
 
 aside .menu__list .menu__list {
   display: flex !important;
-  margin-top: 1.25rem;
-  gap: 1.25rem;
+  margin-top: 0.5rem;
+}
+
+aside .menu__link--sublist.menu__link--active {
+  color: white !important;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+}
+
+aside .theme-doc-sidebar-item-link > .menu__link.menu__link--active {
+  color: var(--color-blue) !important;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
 }
 
 .menu__caret:before {
@@ -55,9 +70,7 @@ aside .menu__list .menu__list {
   height: 10px;
   background: none !important;
 }
-.menu__link.menu__link--sublist {
-  max-width: 10.8125rem;
-}
+
 aside .menu__list-item:not(:first-child) {
   margin-top: 0rem;
 }
@@ -68,11 +81,6 @@ aside .menu__list-item--collapsed .menu__link--sublist:after {
   transform: rotateZ(0deg);
 }
 
-
-aside .menu__link--active:hover {
-  color: var(--color-blue);
-}
-
 aside
   .menu__list
   .menu__list-item
@@ -80,21 +88,14 @@ aside
   .menu__link--active::before {
   content: none;
 }
+
 aside .menu__list .menu__list .menu__link {
   padding-left: 25px;
   height: fit-content;
-  max-width: 173px;
-}
-aside .menu__list .menu__list .menu__link--active {
-  padding-left: 25px;
 }
 
-aside .menu__list .menu__list .menu__link:hover::before {
-  content: url('/img/selected-arrow-blue.svg');
-  top: -1px;
-  position: relative;
-  margin-right: -24px;
-  left: -2.8125rem;
+aside .menu__link:hover {
+  color: var(--color-blue) !important;
 }
 
 @media (min-width: 997px) {
@@ -109,4 +110,13 @@ aside .menu__list .menu__list .menu__link:hover::before {
     flex-grow: 1;
     padding-left: 0rem !important;
   }
+}
+
+.menu__list-item-collapsible a {
+  font-weight: 800;
+}
+
+.theme-doc-sidebar-item-link-level-1 a {
+  font-weight: 800;
+  font-size: 18px;
 }
