Fix sidebar link size so all match (static links and category links)

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -116,7 +116,8 @@ aside .menu__link:hover {
   font-weight: 800;
 }
 
-.theme-doc-sidebar-item-link-level-1 a {
+.theme-doc-sidebar-item-link-level-1 a,
+.theme-doc-sidebar-item-category-level-1 a {
   font-weight: 800;
   font-size: 18px;
 }
